Fix column alignment

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,3 +1,7 @@
+html {
+	min-width: 400px;
+}
+
 #searchBar {
   margin: 15px 10px;
 }
@@ -14,8 +18,9 @@ h6{
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fit, 260px);
   grid-gap: 40px;
+  justify-content: space-around;
   background-color: white;
   padding: 50px;
 }
